css/main.css
html, body {
  margin: 0;
  height: 100%;
}

#score {
  margin: 0;
  padding: 15px;
  position: fixed;
  z-index: 1;
  color: #fff;
  font-family: 'Helvetica', sans-serif;
}

#game {
  background-color: #99ccff;
  margin: 0;
  width: 100%;
  height: 100%;
}

.upper-pipe {
  position: fixed;
  top: 0px;
  right: -300px;
  transform: rotate(180deg) scale(-1, 1);
}

.lower-pipe {
  position: fixed;
  bottom: 0px;
  right: -300px;
}

#character #wing {
  transform-origin: bottom center;
  animation: flap 0.25s linear infinite;
  animation-play-state: running;
}

@keyframes flap {
  to {
    transform: rotate(-15deg);
  }
}

.character-jump-animation {
  animation: jump 0.35s linear;
  animation-fill-mode: forwards;
  animation-timing-function: cubic-bezier(0.155, 0.650, 0.560, 0.840);
  animation-play-state: running;
}

@keyframes jump {
  100% {
    top: 350px;
  }
}

#character {
  width: 100%;
  position: fixed;
  margin: auto;
  visibility: hidden;
}

#character svg {
  margin: auto;
  width: 100%;
}

#clouds {
  width: 100%;
  height: 104px;
  position: fixed;
  top: 10px;
  background-image: url("../assets/clouds.png");
}

#fields {
  width: 100%;
  height: 208px;
  position: fixed;
  bottom: 0px;
  background-image: url("../assets/fields.png");
}

